--- a/dashboard.css
+++ b/dashboard.css
@@ -6,3 +6,24 @@
     box-sizing: border-box;
 }
 
+@keyframes slideIn {
+    from {
+      transform: translateX(-100%);
+      opacity: 0;
+    }
+    to {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+  
+.enter{
+    animation-name: slideIn 0.5s ease-in-out;
+    transition: opacity 0.5s ease-in-out;
+    animation-duration: 0.8s;
+    animation-timing-function: ease-in-out;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+    animation-play-state: running;
+  }
+
